--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,20 @@
     <meta name="twitter:title" content="Your app, your opportunity">
     <meta name="twitter:description" content="Your app is your opportunity to make a difference and we are here to help you reach your goals. We cover all the bits and pieces needed to develop a top-notch, innovative mobile product, from strategy, to design and coding all the product components.">
     <meta name="twitter:card" content="summary"/>
-
+    <!-- Start Single Page Apps for GitHub Pages -->
+    <script type="text/javascript">
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
+    <!-- End Single Page Apps for GitHub Pages -->
     <title>Apportunity.io</title>
   </head>
   <body>
